--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
   <artifactId>ffmpeg</artifactId>
   <version>0.6.2</version>
 </dependency>
- 
+ 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.26</version>
+		</dependency>
 </dependencies>
 </project>
