--- a/src/ffmpeg-utils.properties
+++ b/src/ffmpeg-utils.properties
@@ -1,2 +1,10 @@
-PATH_FFMPEG = e:/Guolei/ffmpeg/bin/ffmpeg.exe
-PATH_FFPROBE = e:/Guolei/ffmpeg/bin/ffprobe.exe
+PATH_FFMPEG 	= e:/Guolei/ffmpeg/bin/ffmpeg.exe
+PATH_FFPROBE 	= e:/Guolei/ffmpeg/bin/ffprobe.exe
+
+# Hardware acceleration methods: cuda dxva2 qsv d3d11va
+HWACCEL			= cuda
+# HWACCEL			= d3d11va
+
+# libx264 libx264rgb h264_amf h264_nvenc h264_qsv nvenc nvenc_h264
+HW_H264_ENC 	= h264_nvenc
+#HW_H264_ENC 	= libx264rgb
