--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,13 @@
 			<artifactId>ffmpeg</artifactId>
 			<version>0.6.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		 
+		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.26</version>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-jdk14</artifactId>
+		    <version>1.7.32</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
